Forms further modification

--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -84,11 +84,11 @@
 				<p>Was the registration centre missing any of the following materials? (tick all that apply)</p>
 				</div>
 				<div class='third'>
-					<div class='options'>Manual Register of Voters (EC. 1A)<input name='E' type='checkbox' class='checkbox alpha' value='1'></div>
-					<div class='options'>Indelible Ink to Mark Fingers<input name='E' type='checkbox' class='checkbox alpha' value='2'></div>
-					<div class='options'>Blank Temporary Voter's Cards<input name='E' type='checkbox' class='checkbox alpha' value='3'></div>
-					<div class='options'>INEC Stamp<input name='E' type='checkbox' class='checkbox alpha' value='4'></div>
-					<div class='options'>None Missing<input name='E' type='checkbox' class='checkbox alpha' value='5'></div>
+					<div class='options'>Manual Register of Voters (EC. 1A)<br><input name='E' type='checkbox' class='checkbox alpha' value='1'></div>
+					<div class='options'>Indelible Ink to Mark Fingers<br><input name='E' type='checkbox' class='checkbox alpha' value='2'></div>
+					<div class='options'>Blank Temporary Voter's Cards<br><input name='E' type='checkbox' class='checkbox alpha' value='3'></div>
+					<div class='options'>INEC Stamp<br><input name='E' type='checkbox' class='checkbox alpha' value='4'></div>
+					<div class='options'>None Missing<br><input name='E' type='checkbox' class='checkbox alpha' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -110,9 +110,9 @@
 					<p>Were any security agents present at the registration centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='G' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='G' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='G' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'>Yes<br><input name='G' type='radio' class='radio numeric' value='1'> </div>
+					<div class='options'>No<br><input name='G' type='radio' class='radio numeric' value='2'> </div>
+					<div class='options'>Unchecked<br><input name='G' type='radio' class='radio numeric' value='3'> </div>
 				</div>
 			</div>
 		</div>
@@ -128,11 +128,11 @@
 					<p>Was anyone permitted to register who appeared under 18 years old? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='H' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='H' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='H' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='H' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='H' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -143,11 +143,11 @@
 					<p>Was anyone permitted to register who had indelible ink on his/her finger meaning he/she had already registered? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='J' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='J' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='J' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='J' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='J' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='J' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='J' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='J' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='J' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='J' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -158,11 +158,11 @@
 					<p>Was anyone permitted to register who did not appear to be from the community? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='K' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='K' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='K' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='K' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='K' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='K' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='K' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='K' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='K' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='K' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -173,11 +173,11 @@
 					<p>Were the fingers of successful registrants marked with indelible ink? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='M' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='M' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='M' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='M' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='M' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='M' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='M' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='M' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='M' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='M' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -188,11 +188,11 @@
 					<p>Were photos taken of successful registrants? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='N' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='N' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='N' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='N' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='N' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None</br /><input name='N' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='N' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='N' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='N' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='N' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -203,11 +203,11 @@
 					<p>Were successful registrants issued with temporary voter's cards? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='P' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='P' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='P' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='P' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='P' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='P' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br ><input name='P' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='P' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='P' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='P' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -218,11 +218,11 @@
 					<p>Were the names of successful registrants entered into the Direct Data Capture (DDC) system? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='Q' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='Q' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='Q' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='Q' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='Q' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='Q' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='Q' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='Q' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='Q' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='Q' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -233,11 +233,11 @@
 					<p>Were the names of successful registrants entered into the Manual Register of Voters (MRV) Form EC.1A? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='R' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='R' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='R' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='R' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='R' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='R' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='R' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<br /><input name='R' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='R' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<br /><input name='R' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -248,11 +248,11 @@
 					<p>Did anyone successfully register for someone who was not present at the registration centre (i.e. proxy registration)? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='S' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='S' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='S' type='radio' class='radio numeric' value='3'>Half</p>
-					<p><input name='S' type='radio' class='radio numeric' value='4'>Most</p>
-					<p><input name='S' type='radio' class='radio numeric' value='5'>All</p>
+					<div class='options'>None<br /><input name='S' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>Few<br /><input name='S' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Half<input name='S' type='radio' class='radio numeric' value='3'></div>
+					<div class='options'>Most<br /><input name='S' type='radio' class='radio numeric' value='4'></div>
+					<div class='options'>All<input name='S' type='radio' class='radio numeric' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -263,9 +263,9 @@
 					<p>Did the Direct Data Capture (DDC) system properly function throughout the day? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='T' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='T' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='T' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'>Yes<br /><input name='T' type='radio' class='radio numeric' value='1'> </div>
+					<div class='options'>No<br /><input name='T' type='radio' class='radio numeric' value='2'> </div>
+					<div class='options'>Unchecked<br /><input name='T' type='radio' class='radio numeric' value='3'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -276,9 +276,9 @@
 					<p>Did the registration centre run out of materials during the day? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='U' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='U' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='U' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'>Yes<br /><input name='U' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'>No<br /><input name='U' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Unchecked<input name='U' type='radio' class='radio numeric' value='3'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -289,9 +289,9 @@
 					<p>Did the registration centre remain open until 5 pm? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='V' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='V' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='V' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'> Yes<br /><input name='V' type='radio' class='radio numeric' value='1'></div>
+					<div class='options'> No<br /><input name='V' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Unchecked<br /><input name='V' type='radio' class='radio numeric' value='3'> </div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -302,9 +302,9 @@
 					<p>Did anyone attempt to disrupt voter registration at the centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='W' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='W' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='W' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'>Yes<br /><input name='W' type='radio' class='radio numeric' value='1'> </div>
+					<div class='options'>No<br /><input name='W' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Unchecked<br /><input name='W' type='radio' class='radio numeric' value='3'> </div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -315,9 +315,9 @@
 					<p>Did anyone attempt to intimidate or harass people in or around the centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='X' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='X' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='X' type='radio' class='radio numeric' value='3'> Unchecked</p>
+					<div class='options'>Yes<br /><input name='X' type='radio' class='radio numeric' value='1'> </div>
+					<div class='options'>No<br /><input name='X' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Unchecked<br /><input name='X' type='radio' class='radio numeric' value='3'> </div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -328,7 +328,7 @@
 					<p>How many people registered during this day? (record number from Certificate of Completion of Daily Registration of Voters Form EC.1B(1)) (enter number) (if not permited to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='Y' type='text' class='text numeric'></p>
+					<p><input name='Y' type='text' class='text numeric' maxlength='3'></p>
 
 				</div>
 			</div>
@@ -340,7 +340,7 @@
 					<p>How many people so far (total to date) have registered at this centre according to the Manual Register of Voters (MRV) Form EC.1A? (enter number) (if not permitted to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='Z' type='text' class='text numeric'></p>
+					<p><input name='Z' type='text' class='text numeric' maxlength='3'></p>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -351,7 +351,7 @@
 					<p>How many people so far (total to date) have registered according to the DDC system? (enter number) (if not permitted to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='AA' type= 'text'  class='text numeric'> </p>
+					<p><input name='AA' type= 'text'  class='text numeric' maxlength='3'> </p>
 				</div>
                         </div>
                     <div class="buttons">
