--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -587,3 +587,9 @@ form .buttons {
 #kwick .four {
 	background: #999;
 }
+
+/*
+ * custom styles
+ */
+.nodata { text-align: center; font-style: italic; padding: 1em; }
+.paginator span { font-size: 1.2em; padding: 0.5em 0.8em; background-color: white; border: solid #333 1px; border-collapse: collapse; margin: 0 -1px 0 0; }
