--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -351,15 +351,26 @@ input.search.button {
 	margin-left:2%;
 }
 
-form .grandparent {
-        width: 100%;
-        display: block;
-        clear: both;
-}
 
 
 
 /* form divs */
+
+form .block {
+	padding: 0;
+}
+
+form .grandparent {
+        width: 100%;
+        display: block;
+        clear: both;
+		background: url('/assets/img/dashed-bg.png') repeat-y;
+		background-position: 670px 0;
+		float: left;
+		margin-bottom: 10px;
+}
+
+
 form .grandparent .parent {
         display:block;
         width: 100%;
@@ -367,6 +378,8 @@ form .grandparent .parent {
         border-bottom: 1px dashed #999;
         float: left;
         padding-bottom: 3px;
+		background: url('/assets/img/dashed-bg.png') repeat-y;
+		background-position: 50px 0;
 }
 
 form .grandparent .parent.last {
@@ -381,17 +394,15 @@ form .grandparent .parent .first, form .grandparent .parent .second, form .grand
 form .grandparent .parent .first {
     width: 2%;
     padding: 1%;
-    border-right: 1px dashed #999;
 }
 
 form .grandparent .parent .second {
-    width: 40%;
+    width: 50%;
     padding: 1%;
-     border-right: 1px dashed #999;
 }
 
 form .grandparent .parent .third {
-    width: 50%;
+    width: 40%;
     padding: 1%;
 }
 
@@ -410,8 +421,8 @@ form .grandparent .parent .third .options input {
 
 form .grandparent .parent input.text.numeric {
     width: 5em;
-		font-size: 1.5em;
-		padding: 2px;
+	font-size: 1.5em;
+	padding: 2px;
 }
 
 form .buttons {
@@ -419,7 +430,7 @@ form .buttons {
     clear: both;
     padding-right: 50px;
     padding-bottom: 10px
-		font-size: 1.5em;
+	font-size: 1.5em;
 }
 
 
