--- a/psc/templates/psc/vr_incident_form.html
+++ b/psc/templates/psc/vr_incident_form.html
@@ -1,12 +1,13 @@
 {% extends "psc/layout.html" %}
 {% block content %}
-
+<form>
 			<div class="grid_16">
 				<div class="box">
-					<div class="block">
-		<form>
+					
+		
 		<h2>Observer Details</h2>
 		<!-- observer details group form -->
+		<div class="block">
 		<div class='grandparent'>
 			<div class='parent last'>
 				<div class='first'>
@@ -20,9 +21,11 @@
 				</div>
 			</div>
 		</div>
+		</div>
                 <div class="clear"></div>
 		<h2>Critical Incidents</h2>
 		<!-- opening checklist question -->
+		<div class='block'>
 		<div class='grandparent'>
 			<div class='parent'>
 				<div class='first'>
@@ -183,9 +186,11 @@
                     <input type="submit" name="submit" value="Submit">
                     <input type="reset" name="reset" value="Reset">
                     </div>
-		</form>
+		
 
 					</div>
+					<div class='clear'></div>
 				</div>
 			</div>
+			</form>
 {% endblock %}
