textbox to checkbox

--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -155,7 +155,7 @@
 					<div class='options'><input name='J' type='radio' class='radio numeric' value='3'>Half<br />(3)</div>
 					<div class='options'><input name='J' type='radio' class='radio numeric' value='4'>Most<br />(4)</div>
 					<div class='options'><input name='J' type='radio' class='radio numeric' value='5'>All<br />(5)</div>
-					<div class='options'><input name='J type='radio' class='radio numeric' value=''>Unchecked<br />(6)</div>
+					<div class='options'><input name='J' type='radio' class='radio numeric' value=''>Unchecked<br />(6)</div>
 
 				</div>
 			</div>
