--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="container_16">
 			<div class="grid_16">
-				<img class="floatLeft" src="/assets/img/logo.jpg" width="81" height="72" alt = "wow" style = "margin:10px"/>
+				<img class="floatLeft" src="/assets/img/ologo.jpg" width="81" height="72" alt = "wow" style = "margin:10px"/>
 				<h1 id="branding">
 					<a href="">Project SwiftCount 2011</a>
 				</h1>
