--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -22,20 +22,24 @@
 				{% for cl in checklists.object_list %}
 				<tr{% cycle '' ' class="odd"' %}>
 					<td>{{ cl.date|date:"SHORT_DATE_FORMAT" }}</td>
-					<td>{{ cl.location.name }}</td>
-					<td>{{ cl.location.code }}</td>
-					<td>{{ cl.location.parent.name }}</td>
-					<td>{{ cl.location.parent.parent.name }}</td>
+					<td>{{ cl.location.name|default:"Unknown" }}</td>
+					<td>{{ cl.location.code|default:"999" }}</td>
+					<td>{{ cl.location.parent.name|default:"Uknown" }}</td>
+					<td>{{ cl.location.parent.parent.name|default:"Uknown" }}</td>
 					<td>{{ cl.observer.name }}</td>
 					<td>{{ cl.observer.supervisor.name }}</td>
 					<td>
 					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
 					</td>
 					<td>
-					{% if cl.A and cl.B and cl.C and cl.D and cl.E and cl.F and cl.G %}
+					{% if cl.A and cl.B and cl.C and cl.G %}
+						{% if cl.D1 or cl.D2 or cl.D3 or cl.D4 %}
+							{% if cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 %}
 					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+							{% endif %}
+						{% endif %}
 					{% else %}
-					{% if cl.A or cl.B or cl.C or cl.D or cl.E or cl.F or cl.G %}
+					{% if cl.A or cl.B or cl.C or cl.D1 or cl.D2 or cl.D3 or cl.D4 or cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 or cl.F or cl.G %}
 					<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
 					&nbsp;
@@ -53,7 +57,7 @@
 					{% endif %}
 					{% endif %}
 					</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="{% url psc.views.vr_incidents cl.id %} ">Add</a></td>
 					<td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>
 				</tr>
 				{% empty %}
