changes made to vr incident update forms and some consistency in naming conventions

--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -96,7 +96,7 @@
                                             <img src="/assets/img/status-busy.png" width="16" height="16" alt="complete" />
                                             {% endif %}
                                         </td>
-                                        <td><a href="{% url psc.views.vr_incidents cl.id %}">Edit</a></td>
+                                        <td><a href="{% url psc.views.vr_incident_update cl.id %}">Edit</a></td>
 					
 				</tr>
 				{% empty %}
