replaces 1 with True in forms as 1 does not cast to True in form update

--- a/psc/templates/psc/vr_incident_update_form.html
+++ b/psc/templates/psc/vr_incident_update_form.html
@@ -27,7 +27,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='{{ form.A.name }}' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.A %} checked='checked' {% endif %}>
+                                            <input name='{{ form.A.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.A %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='B' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.B %} checked='checked' {% endif %}>
+                                            <input name='B' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.B %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='C' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.C %} checked='checked' {% endif %}>
+                                            <input name='C' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.C %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='D' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.D %} checked='checked' {% endif %}>
+                                            <input name='D' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.D %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='E' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.E %} checked='checked' {% endif %}>
+                                            <input name='E' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.E %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='F' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.F %} checked='checked' {% endif %}>
+                                            <input name='F' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.F %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -105,7 +105,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='G' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.G %} checked='checked' {% endif %}>
+                                            <input name='G' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.G %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -118,7 +118,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='H' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.H %} checked='checked' {% endif %}>
+                                            <input name='H' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.H %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -131,7 +131,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='J' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.J %} checked='checked' {% endif %}>
+                                            <input name='J' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.J %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='K' type='checkbox' class='checkbox numeric' value='1' {% if form.initial.K %} checked='checked' {% endif %}>
+                                            <input name='K' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.K %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='M' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.M %} checked='checked' {% endif %}>
+                                            <input name='M' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.M %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -170,7 +170,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='N' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.N %} checked='checked' {% endif %}>
+                                            <input name='N' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.N %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -183,7 +183,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='P' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.P %} checked='checked' {% endif %}>
+                                            <input name='P' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.P %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
@@ -196,7 +196,7 @@
 				</div>
 				<div class='third'>
 					<div class='options'>
-                                            <input name='Q' type='checkbox' class='checkbox numeric' value='1'{% if form.initial.Q %} checked='checked' {% endif %}>
+                                            <input name='Q' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.Q %} checked='checked' {% endif %}>
                                         </div>
 				</div>
 			</div>
