--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -615,3 +615,6 @@ form .buttons input[type='submit'] {
  */
 .nodata { text-align: center; font-style: italic; padding: 1em; }
 .paginator span { font-size: 1.2em; padding: 0.5em 0.8em; background-color: white; border: solid #333 1px; border-collapse: collapse; margin: 0 -1px 0 0; }
+
+#filter li { display: inline; margin: 0; }
+#filter ul { margin-bottom: 1em; }
