--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -51,7 +51,7 @@
 					<p>{{ form.C.help_text }}</p>
 				</div>
 				<div class='third'>
-					<input name='{{ form.C.name }}' type='text' class='text numeric' maxlength='3' value="{{ form.initial.C }}">
+					<input name='{{ form.C.name }}' type='text' class='text numeric' maxlength='3' value="{{ form.initial.C|default:"" }}">
 				</div>
 			</div>
 			<div class='parent'>
@@ -62,10 +62,10 @@
 					<p>{{ form.D1.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.D1.name }}' type='checkbox' class='checkbox alpha' value='1'{% if form.initial.D1 %} checked='checked'{% endif %}>Missing/Broken Computer<br />(1)</div>
-					<div class='options'><input name='{{ form.D2.name }}' type='checkbox' class='checkbox alpha' value='2'{% if form.initial.D2 %} checked='checked'{% endif %}>Missing/Broken Camera<br />(2)</div>
-					<div class='options'><input name='{{ form.D3.name }}' type='checkbox' class='checkbox alpha' value='3'{% if form.initial.D3 %} checked='checked'{% endif %}>Missing/Broken Printer<br />(3)</div>
-					<div class='options'><input name='{{ form.D4.name }}' type='checkbox' class='checkbox alpha' value='4'{% if form.initial.D4 %} checked='checked'{% endif %}>None<br />(Missing/Broken)<br />(4)</div>
+					<div class='options'><input name='{{ form.D1.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.D1 %} checked='checked'{% endif %}>Missing/Broken Computer<br />(1)</div>
+					<div class='options'><input name='{{ form.D2.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.D2 %} checked='checked'{% endif %}>Missing/Broken Camera<br />(2)</div>
+					<div class='options'><input name='{{ form.D3.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.D3 %} checked='checked'{% endif %}>Missing/Broken Printer<br />(3)</div>
+					<div class='options'><input name='{{ form.D4.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.D4 %} checked='checked'{% endif %}>None<br />(Missing/Broken)<br />(4)</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -76,11 +76,11 @@
 				<p>{{ form.E1.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.E1.name }}' type='checkbox' class='checkbox alpha' value='1'{% if form.initial.E1 %} checked='checked'{% endif %}>Manual Register of Voters (EC. 1A)<br></div>
-					<div class='options'><input name='{{ form.E2.name }}' type='checkbox' class='checkbox alpha' value='2'{% if form.initial.E2 %} checked='checked'{% endif %}>Indelible Ink to Mark Fingers<br></div>
-					<div class='options'><input name='{{ form.E3.name }}' type='checkbox' class='checkbox alpha' value='3'{% if form.initial.E3 %} checked='checked'{% endif %}>Blank Temporary Voter's Cards<br></div>
-					<div class='options'><input name='{{ form.E4.name }}' type='checkbox' class='checkbox alpha' value='4'{% if form.initial.E4 %} checked='checked'{% endif %}>INEC Stamp<br></div>
-					<div class='options'><input name='{{ form.E5.name }}' type='checkbox' class='checkbox alpha' value='5'{% if form.initial.E5 %} checked='checked'{% endif %}>None Missing<br></div>
+					<div class='options'><input name='{{ form.E1.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.E1 %} checked='checked'{% endif %}>Manual Register of Voters (EC. 1A)<br></div>
+					<div class='options'><input name='{{ form.E2.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.E2 %} checked='checked'{% endif %}>Indelible Ink to Mark Fingers<br></div>
+					<div class='options'><input name='{{ form.E3.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.E3 %} checked='checked'{% endif %}>Blank Temporary Voter's Cards<br></div>
+					<div class='options'><input name='{{ form.E4.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.E4 %} checked='checked'{% endif %}>INEC Stamp<br></div>
+					<div class='options'><input name='{{ form.E5.name }}' type='checkbox' class='checkbox alpha' value='True'{% if form.initial.E5 %} checked='checked'{% endif %}>None Missing<br></div>
 				</div>
 			</div>
 			<div class='parent'>
